--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -229,11 +229,17 @@ html[dir="rtl"] {
         }
       }
 
-      .brand-name img {
-        width: 200px;
-        height: 70px;
-        object-fit: contain;
-        transition: all .3s linear;
+      .brand-name {
+        font-size: 20px;
+        font-weight: 900;
+        color: #000;
+        
+        img {
+          width: 200px;
+          height: 70px;
+          object-fit: contain;
+          transition: all .3s linear;
+        }
       }
 
       .form-contain .form-group {
@@ -2574,6 +2580,12 @@ footer {
       width: 200px;
       height: 70px;
       object-fit: contain;
+    }
+
+    .brand-name {
+      font-size: 20px;
+      font-weight: 900;
+      color: #000;
     }
 
     p {
